--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="card-body">
                 <div class="card-title">Resources / Local Resources</div>
                 <hr>
-                <p>This section might be harder to fill. Will be have / find the right API resources to pull up local
+                <p>This section might be harder to fill. Will we have / find the right API resources to pull up local
                     resources? Or should the goal be to more simply offer CDC / WHO resources along with lighter
                     material like things to do while sheltering in place?</p>
 
