Removed shadow from Show More button, slowed animation a bit.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <!-- dynamically filled -->
                 </ul>
                 <!-- this button hides/reveals more info by toggling classes in js -->
-                <button class="btn btn-outline-success" id="show-more" type="button">
+                <button class="btn btn-outline-success shadow-none" id="show-more" type="button">
                     Show More</button>
             </div>
         </div>
