Htlm Design suggested

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Covid-Commu-Dash</title>
@@ -14,73 +15,46 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-dark bg-dark"> -->
-    <div class="jumbotron">
-        <!-- .dblock & .mx-auto make the images centered and responsive
-            id tags to set size in css, probably a better way than this though -->
-        <img src="./assets/image/covid-commu-3.png" alt="Covid-Commu-Dash Logo" class="mx-auto d-block"
-            id="cov-com-text">
-        <!-- <img src="./assets/image/covid-commu-icon.png" alt="Covid-Commu-Dash Logo" class="mx-auto d-block"
-                id="cov-com-icon"> -->
-    </div>
-    <!-- </nav> -->
-    <div class="row">&nbsp;</div>
-    <div class="container">
-
-        <div class="card" id="search-card">
-            <div class="card-body">
-                <button class="btn btn-lg btn-block btn-success search-button">Find Local Information</button>
-            </div>
-        </div>
-
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Map</div>
-                <hr>
-                <p>Possibly a map showing useful places related to covid wellness or
-                    just getting some services or food.
-                    <a href="https://www.mapbox.com">mapbox.com</a> might be the way to go</p>
-            </div>
-        </div>
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Recent Cases / Local Situation</div>
-                <hr>
-                <p>A look at the data trends in the area. New cases etc.
-                </p>
-            </div>
-        </div>
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">Resources / Local Resources</div>
-                <hr>
-                <p>This section might be harder to fill. Will we have / find the right API resources to pull up local
-                    resources? Or should the goal be to more simply offer CDC / WHO resources along with lighter
-                    material like things to do while sheltering in place?</p>
-
-            </div>
-        </div>
-        <div class="row">&nbsp;</div>
-
-        <div class="card all-cards">
-            <div class="card-body">
-                <div class="card-title">News Section</div>
-                <hr>
-                <p>Found a good starting point for this with the CDC's 2019 Novel Coronavirus API. See script file, open
-                    console.</p>
-            </div>
-        </div>
-
-
+ 
     </div>
 
 
+    <div class="  fixed container sidenav clearfix">
+
+        <div class="logo-wrapper" id="logo">
+            <img src=" ./assets/image/covid-commu-3.png" alt="Covid-Commu-Dash Logo" class="mx-auto d-block"
+                id="cov-com-text" width=100%>
+        </div>
+        <div class="menu">
+            <a href="map.html"><button class="btn btn-success float-right" id="Resources">Map</button></a>
+            <a href="resources.html"><button class="btn btn-success float-right" id="Resources">Local
+                    Resources</button></a>
+            <a href="testing.html""><button class=" btn btn-success float-right" id="testing">Testing
+                Center</button></a>
+        </div>
+        <img src="./assets/image/covid.gif.gif" alt="covid" class="mx-auto d-block" id="covid" width=105%>
+
+        <div class="group-search">
+            <button for="startyear" class="btn btn-success  float-right" id="testing">History</button>
+            <select id="start-year">
+                <option value="val0">......</option>
+                <option value="va1">.......</option>
+                <option value="val2">.......</option>
+                <option value="val3">.......</option>
+                <option value="val4">.......</option>
+                <option value="val5">.......</option>
+               
+            </select>
+
+        </div>
+    </div>
+
+    <div>
+        <input id="user-input" class="input1" type="text" placeholder="Enter The Location">
+        <button class="btn button1  btn-success search-button"><i class="fa fa-search"></i> Find Local
+            Information</button>
+
+    </div>
 
 
 
@@ -92,6 +66,9 @@
         integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <!-- my script.js -->
     <script src="./assets/javascript/script.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkrZKJeOT1SlkRxvxPjgFQryfEfmG0iRI&callback=initMap"
+        async defer></script>
 
 </body>
 
