--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Font Pack -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Mapbox CSS -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css" rel="stylesheet" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
     <!-- Project Title -->
     <title>Covid-Commu-Dash</title>
+
 </head>
+
 <body>
+
     <!-- Main NavBar -->
     <nav class="navbar navbar-light navbar-collapse bg-custom-1">
         <a class="navbar-brand justify-content-between" href="#">
@@ -22,6 +27,7 @@
             </div>
             </div>
     </nav>
+
     <!-- Navbar links not working yet -->
     <div class="navbar-collapse collapse">
         <ul class="navbar-nav justify-content-right">
@@ -37,6 +43,7 @@
         </ul>
     </div>
     </nav>
+
     <!-- Map container -->
     <div class="row">&nbsp;</div>
     <div class="container">
@@ -52,135 +59,158 @@
                         </div>
                     </div>
                 </form>
+
                 <!-- Map -->
                 <div id="map"></div>
+
+
                 <div class="row">&nbsp;</div>
-    <!-- News and Local Testing -->
-    <div class="card all-cards bg-custom-1">
-        <div class="card-body">
-            <div class="card-title card-text" id="news">News Section</div>
-            <hr style="color: white;">
-            <!-- .hide is the toggle class, important! -->
-            <ul class="hide" id="news-list">
-                <!-- dynamically filled -->
-            </ul>
-            <!-- this button hides/reveals more info by toggling .hide in js -->
-            <button class="btn btn-outline-success shadow-none" id="more-news" type="button">
-                Show More</button>
-        </div>
-    </div>
-    <div class="row">&nbsp;</div>
-    <div class="card all-cards bg-custom-1">
-        <div class="card-body">
-            <div class="card-title card-text" id="local-testing">Testing in Your State</div>
-            <hr>
-            <!-- .hide toggle class -->
-            <ul class="hide" id="test-list">
-                <!-- dynamically filled -->
-            </ul>
-            <!-- button toggles .hide -->
-            <button class="btn btn-outline-success shadow-none" id="more-tests" type="button">
-                Show More</button>
-        </div>
-    </div>
-    <div class="row">&nbsp;</div>
-    <!-- NEW Feature - Select State if IP-API.org can't
-        detect where you are (VPN or mobile data network) -->
-    <div id="user-search card">
-        <p style="color:white;">Not Seeing Local Info?</p>
-        <div class="dropdown">
-            <button class="btn btn-sm btn-success shadow-none dropdown-toggle" id="dropdownMenuButton"
-                type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Select Your State
-            </button>
-            <div class="dropdown-menu pre-scrollable state-hide" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" value="no">Select State</a>
-                <a class="dropdown-item" value="alabama">Alabama</a>
-                <a class="dropdown-item" value="alaska">Alaska</a>
-                <a class="dropdown-item" value="arkansas">Arkansas</a>
-                <a class="dropdown-item" value="california">California</a>
-                <a class="dropdown-item" value="colorado">Colorado</a>
-                <a class="dropdown-item" value="connecticut">Connecticut</a>
-                <a class="dropdown-item" value="delaware">Delaware</a>
-                <a class="dropdown-item" value="florida">Florida</a>
-                <a class="dropdown-item" value="georgia">Georgia</a>
-                <a class="dropdown-item" value="hawaii">Hawaii</a>
-                <a class="dropdown-item" value="idaho">Idaho</a>
-                <a class="dropdown-item" value="illinois">Illinois</a>
-                <a class="dropdown-item" value="indiana">Indiana</a>
-                <a class="dropdown-item" value="iowa">Iowa</a>
-                <a class="dropdown-item" value="kansas">Kansas</a>
-                <a class="dropdown-item" value="kentucky">Kentucky</a>
-                <a class="dropdown-item" value="louisiana">Louisiana</a>
-                <a class="dropdown-item" value="maine">Maine</a>
-                <a class="dropdown-item" value="maryland">Maryland</a>
-                <a class="dropdown-item" value="massachusetts">Massachusetts</a>
-                <a class="dropdown-item" value="michigan">Michigan</a>
-                <a class="dropdown-item" value="minnesota">Minnesota</a>
-                <a class="dropdown-item" value="mississippi">Mississippi</a>
-                <a class="dropdown-item" value="missouri">Missouri</a>
-                <a class="dropdown-item" value="montana">Montana</a>
-                <a class="dropdown-item" value="nebraska">Nebraska</a>
-                <a class="dropdown-item" value="nevada">Nevada</a>
-                <a class="dropdown-item" value="new-hampshire">New Hampshire</a>
-                <a class="dropdown-item" value="new-jersey">New Jersey</a>
-                <a class="dropdown-item" value="new-mexico">New Mexico</a>
-                <a class="dropdown-item" value="new-york">New York</a>
-                <a class="dropdown-item" value="ohio">Ohio</a>
-                <a class="dropdown-item" value="oklahoma">Oklahoma</a>
-                <a class="dropdown-item" value="oregon">Oregon</a>
-                <a class="dropdown-item" value="pennsylvania">Pennsylvania</a>
-                <a class="dropdown-item" value="rhode-island">Rhode Island</a>
-                <a class="dropdown-item" value="south-carolina">South Carolina</a>
-                <a class="dropdown-item" value="south-dakota">South Dakoto</a>
-                <a class="dropdown-item" value="tennessee">Tennessee</a>
-                <a class="dropdown-item" value="texas">Texas</a>
-                <a class="dropdown-item" value="utah">Utah</a>
-                <a class="dropdown-item" value="vermont">Vermont</a>
-                <a class="dropdown-item" value="virginia">Virginia</a>
-                <a class="dropdown-item" value="washington">Washington</a>
-                <a class="dropdown-item" value="west-virginia">West Virginia</a>
-                <a class="dropdown-item" value="wisconsin">Wisonsin</a>
-                <a class="dropdown-item" value="wyoming">Wyoming</a>
+
+                <!-- News and Local Testing -->
+                <div class="card all-cards bg-custom-1">
+                    <div class="card-body">
+                        <div class="card-title card-text" id="news">News Section</div>
+                        <hr style="color: white;">
+                        <!-- .hide is the toggle class, important! -->
+                        <ul class="hide" id="news-list">
+                            <!-- dynamically filled -->
+                        </ul>
+                        <!-- this button hides/reveals more info by toggling .hide in js -->
+                        <button class="btn btn-outline-success shadow-none" id="more-news" type="button">
+                            Show More</button>
+                    </div>
+                </div>
+
+                <div class="row">&nbsp;</div>
+
+                <div class="card all-cards bg-custom-1">
+                    <div class="card-body">
+                        <div class="card-title card-text" id="local-testing">Testing in Your State</div>
+                        <hr>
+                        <!-- .hide toggle class -->
+                        <ul class="hide" id="test-list">
+                            <!-- dynamically filled -->
+                        </ul>
+                        <!-- button toggles .hide -->
+                        <button class="btn btn-outline-success shadow-none" id="more-tests" type="button">
+                            Show More</button>
+                    </div>
+                </div>
+
+                <div class="row">&nbsp;</div>
+
+                <!-- Select State if IP-API.org can't
+                    detect where you are (VPN or mobile data network) -->
+                <div id="user-search">
+                    <!-- Flex! -->
+                    <div class="d-flex justify-content-center">
+                        <p style="color:white;">Not Seeing Local Info?</p>
+                    </div>
+                    <div class="dropdown d-flex justify-content-center">
+                        <button class="btn btn-sm btn-success shadow-none dropdown-toggle" id="dropdownMenuButton"
+                            type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Select Your State
+                        </button>
+                        <div class="dropdown-menu pre-scrollable state-hide" aria-labelledby="dropdownMenuButton">
+                            <!-- Some two word states are separated by an underscore,
+                                others are a hyphen. Hopefully they leave it as is for now. -->
+                            <a class="dropdown-item" value="no">Select State</a>
+                            <a class="dropdown-item" value="alabama">Alabama</a>
+                            <a class="dropdown-item" value="alaska">Alaska</a>
+                            <a class="dropdown-item" value="arizona">Arizona</a>
+                            <a class="dropdown-item" value="arkansas">Arkansas</a>
+                            <a class="dropdown-item" value="california">California</a>
+                            <a class="dropdown-item" value="colorado">Colorado</a>
+                            <a class="dropdown-item" value="connecticut">Connecticut</a>
+                            <a class="dropdown-item" value="delaware">Delaware</a>
+                            <a class="dropdown-item" value="florida">Florida</a>
+                            <a class="dropdown-item" value="georgia">Georgia</a>
+                            <a class="dropdown-item" value="hawaii">Hawaii</a>
+                            <a class="dropdown-item" value="idaho">Idaho</a>
+                            <a class="dropdown-item" value="illinois">Illinois</a>
+                            <a class="dropdown-item" value="indiana">Indiana</a>
+                            <a class="dropdown-item" value="iowa">Iowa</a>
+                            <a class="dropdown-item" value="kansas">Kansas</a>
+                            <a class="dropdown-item" value="kentucky">Kentucky</a>
+                            <a class="dropdown-item" value="louisiana">Louisiana</a>
+                            <a class="dropdown-item" value="maine">Maine</a>
+                            <a class="dropdown-item" value="maryland">Maryland</a>
+                            <a class="dropdown-item" value="massachusetts">Massachusetts</a>
+                            <a class="dropdown-item" value="michigan">Michigan</a>
+                            <a class="dropdown-item" value="minnesota">Minnesota</a>
+                            <a class="dropdown-item" value="mississippi">Mississippi</a>
+                            <a class="dropdown-item" value="missouri">Missouri</a>
+                            <a class="dropdown-item" value="montana">Montana</a>
+                            <a class="dropdown-item" value="nebraska">Nebraska</a>
+                            <a class="dropdown-item" value="nevada">Nevada</a>
+                            <a class="dropdown-item" value="new_hampshire">New Hampshire</a>
+                            <a class="dropdown-item" value="new-jersey">New Jersey</a>
+                            <a class="dropdown-item" value="new-mexico">New Mexico</a>
+                            <a class="dropdown-item" value="new-york">New York</a>
+                            <a class="dropdown-item" value="north-carolina">North Carolina</a>
+                            <a class="dropdown-item" value="north_dakota">North Dakota</a>
+                            <a class="dropdown-item" value="ohio">Ohio</a>
+                            <a class="dropdown-item" value="oklahoma">Oklahoma</a>
+                            <a class="dropdown-item" value="oregon">Oregon</a>
+                            <a class="dropdown-item" value="pennsylvania">Pennsylvania</a>
+                            <a class="dropdown-item" value="rhode_island">Rhode Island</a>
+                            <a class="dropdown-item" value="south_carolina">South Carolina</a>
+                            <a class="dropdown-item" value="south_dakota">South Dakota</a>
+                            <a class="dropdown-item" value="tennessee">Tennessee</a>
+                            <a class="dropdown-item" value="texas">Texas</a>
+                            <a class="dropdown-item" value="utah">Utah</a>
+                            <a class="dropdown-item" value="vermont">Vermont</a>
+                            <a class="dropdown-item" value="virginia">Virginia</a>
+                            <a class="dropdown-item" value="washington">Washington</a>
+                            <a class="dropdown-item" value="west_virginia">West Virginia</a>
+                            <a class="dropdown-item" value="wisconsin">Wisconsin</a>
+                            <a class="dropdown-item" value="wyoming">Wyoming</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">&nbsp;</div>
+
             </div>
+
+            <!-- Page Break -->
+            <br>
+
+            <!-- Footer -->
+            <p class="m-0 align-self-center text-center"><a style="color: white; letter-spacing: 0.1em;">
+                    Made with <img style="margin-top: -2px;" width="20" height="20"
+                        src="https://img.icons8.com/dusk/64/000000/like.png" /> by <a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;" href="https://github.com/chaseyb"
+                        target="_blank">Chase Johnson,</a><a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;"
+                        href="https://github.com/gloriousLoaf" target="_blank"> David Metcalf,</a><a
+                        style="font-size: 15px; color: white; letter-spacing: 0.1em;"
+                        href="https://github.com/mauricechouam" target="_blank"> Maurice Chouamou </a>
+            </p>
         </div>
     </div>
-    <div class="row">&nbsp;</div>
-</div>
-<!-- Page Break -->
-<br>
-<!-- Footer -->
-<p class="m-0 align-self-center text-center"><a style="color: white; letter-spacing: 0.1em;">
-        Made with <img style="margin-top: -2px;" width="20" height="20"
-            src="https://img.icons8.com/dusk/64/000000/like.png" /> by <a
-            style="font-size: 15px; color: white; letter-spacing: 0.1em;" href="https://github.com/chaseyb"
-            target="_blank">Chase Johnson,</a><a
-            style="font-size: 15px; color: white; letter-spacing: 0.1em;"
-            href="https://github.com/gloriousLoaf" target="_blank"> David Metcalf,</a><a
-            style="font-size: 15px; color: white; letter-spacing: 0.1em;"
-            href="https://github.com/mauricechouam" target="_blank"> Maurice Chouamou </a>
-</p>
-</div>
-</div>
-<!-- main jQuery library -->
-<script src="https://code.jquery.com/jquery-3.5.0.min.js"
-integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-<!-- jQuery UI (must have for Show More buttons) -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-<!-- Popper.js (must have for Bootstrap.js) -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-crossorigin="anonymous"></script>
-<!-- Bootstrap.js (must have for State dropdown) -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-crossorigin="anonymous"></script>
-<!-- Mapbox API -->
-<script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
-<!--- JavaScript -->
-<script src="assets/javascript/app.js"></script>
+
+    <!-- main jQuery library -->
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
+        integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <!-- jQuery UI (must have for Show More buttons) -->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+        integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    <!-- Popper.js (must have for Bootstrap.js) -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <!-- Bootstrap.js (must have for State dropdown) -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <!-- Mapbox API -->
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
+    <!--- JavaScript -->
+    <script src="assets/javascript/app.js"></script>
+
 </body>
+
 </html>
 
 <!-- Data Cards 
@@ -192,6 +222,7 @@ crossorigin="anonymous"></script>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
        </div>
+    
     <div class="card bg-custom-1">
         <div class="card-body bg-custom-1">
             <h5 class="card-title card-text">Example Data</h5>
@@ -199,6 +230,7 @@ crossorigin="anonymous"></script>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
        </div>
+   
     <div class="card bg-custom-1">
         <div class="card-body bg-custom-1">
             <h5 class="card-title card-text">Example Data</h5>
