Integrated mine and Chase's JS scripting: wrapped MapBox calls in functions to be used as need, plugged into document.ready for smooth loading. Added current state display to Testing cards.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 
                 <div class="card all-cards bg-custom-1">
                     <div class="card-body">
-                        <div class="card-title card-text" id="local-testing">Testing in Your State</div>
+                        <div class="card-title card-text" id="local-testing">Testing in Your State
+                            <!-- span filled dynamically with user's state -->
+                            <span id="your-state"></span>
+                        </div>
                         <hr>
                         <!-- .hide toggle class -->
                         <ul class="hide" id="test-list">
