--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <!-- News and Local Testing -->
                 <div class="card all-cards bg-custom-1">
                     <div class="card-body">
-                        <div class="card-title card-text" id="news">News Section</div>
+                        <div class="card-title card-text" id="news">National Covid-19 Headlines</div>
                         <hr style="color: white;">
                         <!-- .hide is the toggle class, important! -->
                         <ul class="hide" id="news-list">
