Fixed syntax issues in navbar, no structural changes.

--- a/index.html
+++ b/index.html
@@ -23,25 +23,23 @@
     <!-- Main NavBar -->
     <nav class="navbar navbar-light navbar-collapse bg-custom-1">
         <a class="navbar-brand justify-content-between" href="#">
-            <img src="assets/images/covid-commu-logo.png" width="335" height="30" alt="">
-            </div>
-            </div>
-    </nav>
+            <img src="assets/images/covid-commu-logo.png" width="335" height="30" alt=""></a>
 
-    <!-- Navbar links not working yet -->
-    <div class="navbar-collapse collapse">
-        <ul class="navbar-nav justify-content-right">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
-            </li>
-        </ul>
-    </div>
+        <!-- Navbar links not working yet -->
+        <!-- Should we delete this? -->
+        <div class="navbar-collapse collapse">
+            <ul class="navbar-nav justify-content-right">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 1</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link 3</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Map container -->
